--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -733,8 +733,8 @@ Detector: {\it CompName}\_I=$p$ {\it CompName}\_ERR=$\sigma$ {\it CompName}\_N=$
 
 For 1D, 2D and 3D monitors/detectors, the data histogram store in the files
 is given per bin when the signal is the neutron intensity ({\it i.e.} most of the cases).
-Using the Monitor\_nD, it is possible to monitor other signals using the
-'\verb+signal=+{\it variable_name}' in the 'option' parameter (refer to that
+Using the Monitor\_nD component, it is possible to monitor other signals using the
+'\verb+signal=+{\it variable\_name}' in the 'options' parameter (refer to that
 component documentation).
 
 \paragraph{Single detectors/monitors}
