Added warning about gravitation that may be wrong, and added kernel call doc for 2nd order solving function
git-svn-id: https://svn.mccode.org/svn/McStasTeX@67 feec88ba-9254-4c29-afb0-2c2f27bf560d

--- a/trunk/kernel.tex
+++ b/trunk/kernel.tex
@@ -48,8 +48,8 @@ neutron to compute the neutron trajectory through the instrument and its
 interaction with the different components. The effect of gravity is
 taken  into account either in particular components (e.g. \verb+Guide_gravity+), or more generaly
 when setting an execution flag (\verb+-g+) to perform gravitation
-computation. This latter setting is only an approximation and may give
-wrong results.\index{Gravitation}
+computation. This latter setting is only an approximation and may produce
+wrong results with some components.\index{Gravitation}
 
 An instrument consists of a list of components through which the neutron
 passes one after the other. The order of components is thus significant
