--- a/trunk/running.tex
+++ b/trunk/running.tex
@@ -477,7 +477,7 @@ When choosing the HTML format, the simulation results are save as a web page, wh
       terminal, such as detector intensities, will still be written). \\
       \hline
       \texttt{-g} \my \texttt{--gravitation}
-        & This option toggles the gravitation (approximation) handling for the whole neutron propagation within the instrument.\\
+        & This option toggles the gravitation (approximation) handling for the whole neutron propagation within the instrument. May produce wrong results depending on the components.\\
       \hline
       \texttt{--format={\it FORMAT}}
         & This option sets the file format for result simulation and data files. \\
